--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
       <!-- <script src="sketch-test.js"></script> -->
-      <script src="sketch.js"></script>
+      <script src="sketch_new.js"></script>
+      <!-- <script src="sketch.js"></script> -->
   </body>
 </html>
